first attemp to lint open api
