# src/main/kotlin/com/nikkijuk/pigeongram/web/SignatureController.kt
@@ -1,17 +1,16 @@
 package com.nikkijuk.pigeongram.web
 
-import com.nikkijuk.pigeongram.PigeongramApplicationKt
 import com.nikkijuk.pigeongram.domain.service.SignatureService
 import com.nikkijuk.pigeongram.web.model.toApi
 import com.nikkijuk.pigeongram.web.model.toDomain
-import org.slf4j.Logger
-import org.slf4j.LoggerFactory
 import org.springframework.hateoas.CollectionModel
 import org.springframework.hateoas.EntityModel
 import org.springframework.hateoas.IanaLinkRelations
 import org.springframework.hateoas.server.RepresentationModelAssembler
 import org.springframework.hateoas.server.core.DummyInvocationUtils.methodOn
 import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo
+import org.springframework.http.HttpStatus
+import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
 import org.springframework.stereotype.Component
 import org.springframework.web.bind.annotation.DeleteMapping
@@ -20,7 +19,10 @@ import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.PutMapping
 import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.web.bind.annotation.RequestMapping
+import org.springframework.web.bind.annotation.ResponseStatus
 import org.springframework.web.bind.annotation.RestController
+
 import com.nikkijuk.pigeongram.domain.model.Signature as SignatureDomain
 import com.nikkijuk.pigeongram.web.model.Signature as SignatureApi
 
@@ -47,25 +49,20 @@ class SignatureModelAssembler :
  * please see tutorial at: https://spring.io/guides/tutorials/rest/
  */
 @RestController
-class SignatureController (
-    val service: SignatureService,
-    val assembler: SignatureModelAssembler
-)  {
+@RequestMapping(value = ["/signatures"], produces = [MediaType.APPLICATION_JSON_VALUE])
+class SignatureController (val service: SignatureService, val assembler: SignatureModelAssembler)  {
 
-    private val logger: Logger = LoggerFactory.getLogger(PigeongramApplicationKt::class.java)
-
-    @PostMapping("/signatures")
+    @PostMapping("/")
     fun create(@RequestBody newSignature: SignatureApi): ResponseEntity<EntityModel<SignatureApi>> {
-        val createdSignature = service.createSignature(newSignature.toDomain())
+        val createdSignature: SignatureDomain = service.createSignature(newSignature.toDomain())
         val entityModel: EntityModel<SignatureApi> = assembler.toModel(createdSignature.toApi())
 
-        // 201 returned
         return ResponseEntity
-            .created(entityModel.getRequiredLink(IanaLinkRelations.SELF).toUri())
+            .created(entityModel.getRequiredLink(IanaLinkRelations.SELF).toUri()) // 201 returned
             .body<EntityModel<SignatureApi>>(entityModel)
     }
 
-    @PutMapping("/signatures/{id}")
+    @PutMapping("/{id}")
     fun replace(
         @RequestBody newSignature: SignatureApi,
         @PathVariable id: Long
@@ -82,26 +79,26 @@ class SignatureController (
             .body<EntityModel<SignatureApi>>(entityModel)
     }
 
-    @DeleteMapping("/signatures/{id}")
+    @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     fun delete (@PathVariable id: Long): ResponseEntity<SignatureApi> {
         service.deleteSignature(id)
         return ResponseEntity.noContent().build()
     }
 
-    @GetMapping("/signatures/{id}")
+    @GetMapping("/{id}")
     fun one(@PathVariable id: Long): EntityModel<SignatureApi> {
         val signature: SignatureDomain = service.retrieveOrFail(id)
 
         return assembler.toModel(signature.toApi())
     }
 
-    @GetMapping("/signatures")
+    @GetMapping("/")
     fun all(): CollectionModel<EntityModel<SignatureApi>> {
         val signatures: List<EntityModel<SignatureApi>> = service.retrieveAll()
             .map{ assembler.toModel(it.toApi()) }
 
-        return CollectionModel.of(
-            signatures,
+        return CollectionModel.of(signatures,
             linkTo(methodOn(SignatureController::class.java).all()).withSelfRel()
         )
     }
